--- a/indirect-config.cmake.in
+++ b/indirect-config.cmake.in
@@ -1,5 +1,5 @@
 @PACKAGE_INIT@
 
-set_and_check(PROPAGATE_CONST_INCLUDE_DIR "@PACKAGE_INCLUDE_INSTALL_DIR@")
+set_and_check(CPP_INDIRECT_INCLUDE_DIR "@PACKAGE_INCLUDE_INSTALL_DIR@")
 
-check_required_components(propagate_const)
+check_required_components(cpp_indirect)
