--- a/.travis.yml
+++ b/.travis.yml
@@ -64,17 +64,17 @@ matrix:
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
 
      # Clang 7.0
-     - env: COMPILER=clang++-7.0 BUILD_TYPE=Debug
-       addons: &clang70
-         apt:
-           packages:
-             - clang-7.0
-             - g++-7
-           sources:
-             - ubuntu-toolchain-r-test
-             - llvm-toolchain-trusty-7.0
-             - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7.0 main'
-               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+     #      - env: COMPILER=clang++-7.0 BUILD_TYPE=Debug
+     #  addons: &clang70
+     #    apt:
+     #      packages:
+     #        - clang-7.0
+     #        - g++-7
+     #      sources:
+     #        - ubuntu-toolchain-r-test
+     #        - llvm-toolchain-trusty-7.0
+     #        - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7.0 main'
+     #          key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
 
     ##########################################################################
     # GCC on Linux
