--- a/.travis.yml
+++ b/.travis.yml
@@ -63,18 +63,19 @@ matrix:
             - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
 
-     # Clang 7.0
-     #      - env: COMPILER=clang++-7.0 BUILD_TYPE=Debug
-     #  addons: &clang70
-     #    apt:
-     #      packages:
-     #        - clang-7.0
-     #        - g++-7
-     #      sources:
-     #        - ubuntu-toolchain-r-test
-     #        - llvm-toolchain-trusty-7.0
-     #        - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7.0 main'
-     #          key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+    # Clang 7.0
+    - env: COMPILER=clang++-7.0 BUILD_TYPE=Debug 
+      addons: &clang70
+        apt:
+          packages:
+            - clang-7.0
+            - g++-7
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7.0
+            - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7.0 main'
+              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+
 
     ##########################################################################
     # GCC on Linux
@@ -88,21 +89,21 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
 
-     # GCC 8
-     - env: COMPILER=g++-8 BUILD_TYPE=Debug
-       addons: &gcc8
-         apt:
-           packages: g++-8
-           sources:
-             - ubuntu-toolchain-r-test
+    # GCC 8
+    - env: COMPILER=g++-8 BUILD_TYPE=Debug 
+      addons: &gcc8
+        apt:
+          packages: g++-8
+          sources:
+            - ubuntu-toolchain-r-test
 
-     # GCC 9
-     #     - env: COMPILER=g++-9 BUILD_TYPE=Debug
-     #  addons: &gcc9
-     #    apt:
-     #      packages: g++-9
-     #      sources:
-     #        - ubuntu-toolchain-r-test
+    # GCC 9
+    - env: COMPILER=g++-9 BUILD_TYPE=Debug 
+      addons: &gcc9
+        apt:
+          packages: g++-9
+          sources:
+            - ubuntu-toolchain-r-test
 
 # Added following instructions from https://docs.travis-ci.com/user/installing-dependencies#Installing-Packages-with-the-APT-Addon
 before_install:
@@ -174,4 +175,3 @@ script:
   # build and run tests
   - cmake --build . -- -j${JOBS}
   - ctest --output-on-failure -j${JOBS}
-
