--- a/.travis.yml
+++ b/.travis.yml
@@ -37,17 +37,6 @@ matrix:
     # Clang on Linux
     ##########################################################################
 
-    # Clang 4.0
-    - env: COMPILER=clang++-4.0 BUILD_TYPE=Debug 
-      addons: &clang40
-        apt:
-          packages:
-            - clang-4.0
-            - g++-5
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-4.0
-
     # Clang 5.0
     - env: COMPILER=clang++-5.0 BUILD_TYPE=Debug 
       addons: &clang50
@@ -74,31 +63,45 @@ matrix:
             - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
 
+    # Clang 7.0
+    - env: COMPILER=clang++-7 BUILD_TYPE=Debug 
+      addons: &clang70
+        apt:
+          packages:
+            - clang-7
+            - g++-7
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7
+            - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7 main'
+              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+
+
     ##########################################################################
     # GCC on Linux
     ##########################################################################
-
-    # GCC 5
-    - env: COMPILER=g++-5 BUILD_TYPE=Debug 
-      addons: &gcc5
-        apt:
-          packages: g++-5
-          sources:
-            - ubuntu-toolchain-r-test
-
-    # GCC 6
-    - env: COMPILER=g++-6 BUILD_TYPE=Debug 
-      addons: &gcc6
-        apt:
-          packages: g++-6
-          sources:
-            - ubuntu-toolchain-r-test
 
     # GCC 7
     - env: COMPILER=g++-7 BUILD_TYPE=Debug 
       addons: &gcc7
         apt:
           packages: g++-7
+          sources:
+            - ubuntu-toolchain-r-test
+
+    # GCC 8
+    - env: COMPILER=g++-8 BUILD_TYPE=Debug 
+      addons: &gcc8
+        apt:
+          packages: g++-8
+          sources:
+            - ubuntu-toolchain-r-test
+
+    # GCC 9
+    - env: COMPILER=g++-9 BUILD_TYPE=Debug 
+      addons: &gcc9
+        apt:
+          packages: g++-9
           sources:
             - ubuntu-toolchain-r-test
 
@@ -172,4 +175,3 @@ script:
   # build and run tests
   - cmake --build . -- -j${JOBS}
   - ctest --output-on-failure -j${JOBS}
-
