--- a/indirect-config.cmake.in
+++ b/indirect-config.cmake.in
@@ -2,4 +2,9 @@
 
 set_and_check(CPP_INDIRECT_INCLUDE_DIR "@PACKAGE_INCLUDE_INSTALL_DIR@")
 
-check_required_components(cpp_indirect)
+check_required_components(indirect)
+
+if(NOT TARGET indirect::indirect)
+    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
+    include(${CMAKE_CURRENT_LIST_DIR}/indirect-target.cmake)
+endif()
