--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ matrix:
     ##########################################################################
 
     # Clang 5.0
-    - env: COMPILER=clang++-5.0 BUILD_TYPE=Debug 
+    - env: COMPILER=clang++-5.0 BUILD_TYPE=Debug COVERAGE=1 
       addons: &clang50
         apt:
           packages:
@@ -51,7 +51,7 @@ matrix:
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
 
     # Clang 6.0
-    - env: COMPILER=clang++-6.0 BUILD_TYPE=Debug 
+    - env: COMPILER=clang++-6.0 BUILD_TYPE=Debug COVERAGE=1 
       addons: &clang60
         apt:
           packages:
@@ -64,7 +64,7 @@ matrix:
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
 
     # Clang 7.0
-    - env: COMPILER=clang++-7 BUILD_TYPE=Debug 
+    - env: COMPILER=clang++-7 BUILD_TYPE=Debug COVERAGE=1 
       addons: &clang70
         apt:
           packages:
@@ -82,7 +82,7 @@ matrix:
     ##########################################################################
 
     # GCC 7
-    - env: COMPILER=g++-7 BUILD_TYPE=Debug 
+    - env: COMPILER=g++-7 BUILD_TYPE=Debug COVERAGE=1 
       addons: &gcc7
         apt:
           packages: g++-7
@@ -90,7 +90,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     # GCC 8
-    - env: COMPILER=g++-8 BUILD_TYPE=Debug 
+    - env: COMPILER=g++-8 BUILD_TYPE=Debug COVERAGE=1 
       addons: &gcc8
         apt:
           packages: g++-8
@@ -98,7 +98,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     # GCC 9
-    - env: COMPILER=g++-9 BUILD_TYPE=Debug 
+    - env: COMPILER=g++-9 BUILD_TYPE=Debug COVERAGE=1 
       addons: &gcc9
         apt:
           packages: g++-9
@@ -174,4 +174,11 @@ before_script:
 script:
   # build and run tests
   - cmake --build . -- -j${JOBS}
+  # Waiting for the following issue to be fixed before Mac OS X support can be enabled: https://github.com/RWTH-HPC/CMake-codecov/pull/15
+  - |
+    if [[ "${TRAVIS_OS_NAME}" == "linux" ]] && [[ "${COVERAGE}" == "1" ]]; then
+      cmake --build . --target gcov
+      cmake --build . --target lcov
+      bash <(curl -s https://codecov.io/bash) -X gcov || echo "Codecov did not collect coverage reports"
+    fi
   - ctest --output-on-failure -j${JOBS}
