Quotes not needed on version number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ if(NOT DEFINED PROJECT_NAME)
     set(CPP_INDIRECT_IS_SUBPROJECT ON)
 endif()
 
-set(CPP_INDIRECT_VALUE_VERSION "0.0.1")
+set(CPP_INDIRECT_VALUE_VERSION 0.0.1)
 
 project(indirect_value LANGUAGES CXX VERSION ${CPP_INDIRECT_VALUE_VERSION})
 
