--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,6 @@ cmake_dependent_option(ENABLE_CODE_COVERAGE "Enable code coverage" ON "\"${CMAKE
 cmake_dependent_option(ENABLE_INCLUDE_NATVIS "Enable inclusion of a natvis file for debugging" ON "\"${CMAKE_CXX_COMPILER_ID}\" STREQUAL \"MSVC\"" OFF)
 option(ENABLE_SANITIZERS "Enable Address Sanitizer and Undefined Behaviour Sanitizer if available" OFF)
 
-include(CTest)
-include(FetchContent)
-include(GNUInstallDirs)
-include(CMakePackageConfigHelpers)
-
 add_library(indirect_value INTERFACE)
 target_include_directories(indirect_value
     INTERFACE
@@ -36,7 +31,7 @@ target_sources(indirect_value
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/indirect_value.h>
         # Only include natvis files in Visual Studio
         $<BUILD_INTERFACE:$<$<CXX_COMPILER_ID:MSVC>:${CMAKE_CURRENT_SOURCE_DIR}/indirect_value.natvis>>
-        $<INSTALL_INTERFACE:$<$<BOOL:{ENABLE_INCLUDE_NATVIS}>:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}/indirect_value.natvis>>
+        $<INSTALL_INTERFACE:$<$<BOOL:{ENABLE_INCLUDE_NATVIS}>:${CMAKE_INSTALL_FULL_INCLUDEDIR}/indirect_value.natvis>>
 )
 
 target_compile_features(indirect_value
