--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -4,10 +4,10 @@ if (CURL)
         COMMAND
             pwd
         COMMAND
-            ${CURL} -k https://api.csswg.org/bikeshed/ -F file=@${CMAKE_CURRENT_SOURCE_DIR}/p1950.md -F force=1 > p1950r1.html
+            ${CURL} -k https://api.csswg.org/bikeshed/ -F file=@${CMAKE_CURRENT_SOURCE_DIR}/p1950.md -F force=1 > D1950r1.html
         BYPRODUCTS
-            p1950r1.html
+            D1950r1.html
         COMMENT
-            "Generating ISO Paper p1950 revision 1"
+            "Generating ISO Paper D1950 revision 1"
     )
 endif ()
