--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,19 @@ matrix:
 #      env:
 #        - CONAN_GCC_VERSIONS=8
 #        - CONAN_DOCKER_IMAGE=conanio/gcc8
+        ############################################################################
+        # Install a recent CMake (unless already installed on OS X)
+        ############################################################################
+        - CMAKE_VERSION=3.16.5
+        - |
+          if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+            CMAKE_URL="https://cmake.org/files/v${CMAKE_VERSION%.[0-9]}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz"
+            mkdir cmake && travis_retry wget --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+            export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+          else
+            which cmake || brew install cmake || brew upgrade cmake
+          fi
+        - cmake --version
       script:
         # have CMake to generate build files
         - cd "${TRAVIS_BUILD_DIR}"
