--- a/.travis.yml
+++ b/.travis.yml
@@ -38,15 +38,15 @@ matrix:
       env: CONAN_CLANG_VERSIONS=8 CONAN_ARCHS=x86_64 CONAN_DOCKER_IMAGE=conanio/clang8 COVERAGE=1
     - <<: *linux
       env: CONAN_CLANG_VERSIONS=9 CONAN_ARCHS=x86_64 CONAN_DOCKER_IMAGE=conanio/clang9 COVERAGE=1
-    - <<: *osx
-      osx_image: xcode9.4
-      env: CONAN_APPLE_CLANG_VERSIONS=9.1
-    - <<: *osx
-      osx_image: xcode10.3
-      env: CONAN_APPLE_CLANG_VERSIONS=10.0
-    - <<: *osx
-      osx_image: xcode11.2
-      env: CONAN_APPLE_CLANG_VERSIONS=11.0
+    # - <<: *osx
+    #   osx_image: xcode9.4
+    #   env: CONAN_APPLE_CLANG_VERSIONS=9.1
+    # - <<: *osx
+    #   osx_image: xcode10.3
+    #   env: CONAN_APPLE_CLANG_VERSIONS=10.0
+    # - <<: *osx
+    #   osx_image: xcode11.2
+    #   env: CONAN_APPLE_CLANG_VERSIONS=11.0
 
 install:
   - ./.travis/install.sh
