--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -77,10 +77,10 @@ jobs:
           vs-version: "16.5"
       - name: Install Latest GCC 
         if: matrix.settings.compiler.type == 'GCC'
-        shell: bash
-        run: |
-          sudo apt update
-          sudo apt install gcc-11-multilib g++-11-multilib
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          version: ${{ matrix.settings.compiler.version }}
+          platform: x64
       - name: Install Clang
         if: matrix.settings.compiler.type == 'CLANG'
         uses: egor-tensin/setup-clang@v1
