Replace unique_ptr by manual resource management. (#85)
* Replace unique_ptr by manual resource management.

* Avoid -Wself-assign-overload and -Wself-move

* Link with /bigobj under MSVC to avoid error C1128

* Add more unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ if (${CPP_INDIRECT_IS_SUBPROJECT})
             PRIVATE
                 $<$<CXX_COMPILER_ID:MSVC>:/EHsc>
                 $<$<CXX_COMPILER_ID:MSVC>:/W4>
+                $<$<CXX_COMPILER_ID:MSVC>:/bigobj>
                 $<$<OR:$<CXX_COMPILER_ID:GNU>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:Clang>>:-Werror;-Wall;-Wno-self-assign-overloaded;-Wno-unknown-warning-option>
         )
 
