--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           path: "~/.cache/bazel"
           key: bazel
-      - run: bazel test //...
+      - run: bazel test --cxxopt='-std=c++20' //...
